--- a/package.json
+++ b/package.json
@@ -2,21 +2,44 @@
   "name": "micro-front-end",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/admin",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.137",
+    "@mui/material": "^5.10.6",
+    "@mui/system": "^5.10.16",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "ag-grid-community": "^27.3.0",
+    "ag-grid-react": "^27.3.0",
+    "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.3",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.0",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "9.0.3",
+    "recharts": "^2.1.14",
+    "sass": "^1.54.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts --openssl-legacy-provider test",
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint:fix": "eslint --fix .",
+    "format:check": "prettier-eslint --list-different \"src/**/*.{js,jsx,css,scss}\"",
+    "format:fix": "prettier-eslint --write \"src/**/*.{js,jsx,css,scss}\""
   },
+  "proxy": "https://frontierfinance.dev",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +57,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.2",
+    "prettier": "^2.8.0",
+    "prettier-eslint-cli": "^7.1.0"
   }
 }
