--- a/package.json
+++ b/package.json
@@ -10,24 +10,23 @@
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.10.6",
     "@mui/system": "^5.10.16",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "ag-grid-community": "^27.3.0",
     "ag-grid-react": "^27.3.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.3",
+    "eslint": "8.50.0",
+    "joi": "^17.10.2",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.2",
     "react-i18next": "^11.18.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "9.0.3",
     "recharts": "^2.1.14",
     "sass": "^1.54.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,12 +39,6 @@
     "format:fix": "prettier-eslint --write \"src/**/*.{js,jsx,css,scss}\""
   },
   "proxy": "https://frontierfinance.dev",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -59,7 +52,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
